@@ -1,0 +1,73 @@
+/*
+ * Latin1Codec.cpp -
+ *
+ *   Copyright (c) 2008  Kokosabu(MIURA Yasuyuki)  <kokosabu@gmail.com>
+ *
+ *   Redistribution and use in source and binary forms, with or without
+ *   modification, are permitted provided that the following conditions
+ *   are met:
+ *
+ *   1. Redistributions of source code must retain the above copyright
+ *      notice, this list of conditions and the following disclaimer.
+ *
+ *   2. Redistributions in binary form must reproduce the above copyright
+ *      notice, this list of conditions and the following disclaimer in the
+ *      documentation and/or other materials provided with the distribution.
+ *
+ *   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ *   "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ *   LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ *   A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
+ *   OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+ *   SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
+ *   TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+ *   PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+ *   LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ *   NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ *   SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ *
+ *  $Id$
+ */
+
+#include "Object.h"
+#include "Object-inl.h"
+#include "SString.h"
+#include "Latin1Codec.h"
+#include "BinaryOutputPort.h"
+#include "BinaryInputPort.h"
+#include "ErrorProcedures.h"
+
+using namespace scheme;
+
+int Latin1Codec::out(BinaryOutputPort* port, ucs4char u)
+{
+    static uint8_t buf[1];
+    const int size = out(buf, u);
+    return port->putU8(buf, size);
+}
+
+int Latin1Codec::out(uint8_t* buf, ucs4char u)
+{
+    buf[0] = (uint8_t)u;
+    return 1;
+}
+
+ucs4char Latin1Codec::in(BinaryInputPort* port)
+{
+    const int f = port->getU8();
+    if (f == EOF) return EOF;
+    return (uint8_t)(f & 0xff);
+}
+
+ucs4string Latin1Codec::readWholeString(BinaryInputPort* port)
+{
+    ucs4string ret;
+    for (;;) {
+        const ucs4char ch = in(port);
+        if (EOF == ch) {
+            break;
+        }
+        ret += ch;
+    }
+    return ret;
+}
