@@ -2,6 +2,8 @@
 
         * Added: utf-16-codec.
 
+        * Added: latin-1-codec.
+
 2008-12-17  kokosabu  <kokosabu@gmail.com>
 
         * Added: buffer-mode?.
